# price_lookup

./: MANIFEST.in  README.md  pyproject.toml  setup.py
price_lookup/price_lookup/: hooks.py  modules.txt
price_lookup/price_lookup/config/: desktop.py  docs.py
price_lookup/price_lookup/doctype/price_lookup_settings/: price_lookup_settings.js  price_lookup_settings.json  price_lookup_settings.py  test_price_lookup_settings.py
price_lookup/price_lookup/fixtures/: custom_field.json
price_lookup/price_lookup/hook/: material_request.py  purchase_order.py  quotation.py  request_for_quotation.py  sales_order.py  supplier_quotation.py
price_lookup/price_lookup/public/js/: material_request.js  purchase_order.js  quotation.js  request_for_quotation.js  sales_order.js  supplier_quotation.js
